Resolve Mobile Header Gap

--- a/assets/styles/headers.css
+++ b/assets/styles/headers.css
@@ -77,9 +77,13 @@
 @media (max-width: 767px) {
     #header {
         flex-direction: column;
+        margin-right: 0;
     }
     #header .branding {
         z-index: 100;
+    }
+    #header .extender {
+        display: none;
     }
 
     #navbar {
